[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-analyzer-langchain"
version = "0.1.0"
description = "Simple LangGraph example that decomposes a request into executable steps with tags and embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "flake8>=7.0.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["context_analyzer*"]

[tool.flake8]
max-line-length = 100
exclude = [
  ".git",
  "__pycache__",
  ".venv",
]

[tool.mypy]
python_version = "3.11"
files = ["context_analyzer"]
pretty = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
